<resources>
    <string name="app_name">Practical 4.2</string>
    <string name="choose_toppings">Choose Toppings</string>
    <string name="syrup">Chocolate syrup</string>
    <string name="sprinkles">Sprinkles</string>
    <string name="crushed_nuts">Crushed nuts</string>
    <string name="cherries">Cherries</string>
    <string name="oreo">Oreo cookie crumbles</string>
    <string name="show_toast">Show Toast</string>
</resources>